--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "@types/json-diff": "^1.0.3",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "concurrently": "^7.3.0",
@@ -47,6 +48,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "google-auth-library": "^9.6.3",
+    "json-diff": "^1.0.6",
     "jsonwebtoken": "^9.0.2",
     "migrate-mongo": "^11.0.0",
     "mongoose": "^8.0.4",
